--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   get_storage: ^2.0.3
   json_annotation: ^4.8.1
   flutter_easyloading: ^3.0.5
+  sliding_clipped_nav_bar: ^3.1.1
+  contained_tab_bar_view: ^0.8.0
 
   
   # The following adds the Cupertino Icons font to your application.
@@ -67,6 +69,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets\imgs\logo_login.png
+    - assets\imgs\414264.png
+    - assets\imgs\start_icon.png
+    - assets\imgs\check_icon.png
+    - assets\imgs\user_icon.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
